# protocol-development-screening-test2

./: CMakeLists.txt  LICENSE  README.md  input.txt  main.cpp
